kafka/kafka-ui/new/examples/ui-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui-route
  namespace: kafka
spec:
  parentRefs:
    - name: kafka-gateway
      sectionName: https # 对应 Gateway 的监听器名称
  hostnames:
    - "kafka-ui.sumery.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kafbat-ui-kafka-ui
          port: 80
